# paralives-modgen

./: .gitignore  LICENSE  NEXUS_LISTING.md  README.md  pyproject.toml
paralives_modgen/: __init__.py  cli.py  guid.py  parser.py  serializer.py
tests/: test_roundtrip.py
