[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paralives-modgen"
version = "0.1.0"
description = "Parse, manipulate, and emit Paralives .setting files"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LoryGlory" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
modgen = "paralives_modgen.cli:main"

[tool.setuptools.packages.find]
include = ["paralives_modgen*"]
